Temporary tilestache url change while server is down

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -305,7 +305,7 @@
                 opacity:0.7,
                 zIndex:4
             }),
-            usgs = L.tileLayer('http://china-tilestache.aiddata.org/usgs/{z}/{x}/{y}.png',{
+            usgs = L.tileLayer('http://localhost:8080/usgs/{z}/{x}/{y}.png',{
                 attribution: "Base layer data from <a href='http://tin.er.usgs.gov/mrds/'>USGS MRDS</a>",
                 noWrap:true,
                 zIndex:4
